2010-07-07  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        Lazy mode of parser allows invalid syntax in object literals.
        https://bugs.webkit.org/show_bug.cgi?id=41809

        Make the parser itself validate getter and setter syntax rather
        than offloading it to the AST builder.

        * parser/ASTBuilder.h:
        (JSC::ASTBuilder::createGetterOrSetterProperty):
        * parser/JSParser.cpp:
        (JSC::JSParser::parseProperty):

2010-07-07  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Adam Roben.

        Revert r62689.
        https://bugs.webkit.org/show_bug.cgi?id=41804

        * runtime/Collector.cpp:
        (JSC::Heap::freeBlocks):

2010-07-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Sam Weinig.

        Add reverseFind to Vector and deploy in HTML5 parser
        https://bugs.webkit.org/show_bug.cgi?id=41778

        This method seems generally useful.  I'm slightly surprised we don't
        have it already.

        * wtf/Vector.h:
        (WTF::::reverseFind):

2010-07-07  Darin Adler  <darin@apple.com>

        Reviewed by Adam Barth.

        Turn on adoptRef assertion for RefCounted
        https://bugs.webkit.org/show_bug.cgi?id=41547

        * wtf/CrossThreadRefCounted.h: Fixed include style. Includes of other
        WTF headers should use "" includes; consistent in most WTF headers.
        Added a call to relaxAdoptionRequirement.

        * wtf/RefCounted.h: Fixed include style. Removed LOOSE_REF_COUNTED.
        Added relaxAdoptionRequirement.

2010-07-07  Anders Carlsson  <andersca@apple.com>

        Try to fix the Windows build.

        * runtime/Collector.cpp:
        (JSC::Heap::freeBlocks):

2010-07-07  Darin Adler  <darin@apple.com>

        Reviewed by Adam Barth.

        More OwnPtr work
        https://bugs.webkit.org/show_bug.cgi?id=41727

        * API/JSCallbackObject.h:
        (JSC::JSCallbackObjectData::setPrivateProperty): Use adoptPtr.