@@ -35,6 +35,7 @@
 #include "RegExpPrototype.h"
 #include "RegExp.h"
 #include "RegExpCache.h"
+#include <wtf/PassOwnPtr.h>
 
 namespace JSC {
 
